# JDRuwa

./: .env_dev  .gitignore  ALEMBIC_GUIDE.md  GRAPHQL_SETUP.md  README.md  alembic.ini  main.py  migrate_username.py  package-lock.json  package.json  password_hooks_guide.py  pyproject.toml  requirements.txt  structure.txt  test_new_security.py  test_password_hooks.py
alembic/: env.py
alembic/versions/: 2025_10_19_1639-6b516408398c_initial_migration_create_users_table.py  2025_10_19_1640-62c8ad7f8c79_add_index_on_users_created_at.py
app/: apollo-wrapper.js  layout.js  page.js  theme.js
app/core/: config.py
app/dashboard/: page.js
app/db/: base.py  init_db.py
app/graphql/: context.py  schema.py
app/login/: page.js
app/register/: page.js
app/services/: auth_service.py  user_service.py
app/validations/: __init__.py  auth_validations.py  user_validations.py
config/: auth.py  env.py
controllers/: auth.py  permissions.py  roles.py  users.py
database/: connect.py
database/postgresql/: .env_dev
lib/: apollo-client.js  auth-context.js
lib/graphql/: auth.js  fragments.js
migrations/: env.py
migrations/versions/: 615ae8ed9453_add_roles_and_permissions_tables.py  6347302b0284_add_users_table.py  76acc1e608dc_create_users.py  (+3 more)
models/: __init__.py  associations.py  base.py  permission.py  role.py  user.py
postgresql/: .env  docker-compose.yml
routers/: auth.py  health.py  permissions.py  roles.py  users.py
schemas/: auth.py  permissions.py  roles.py  users.py
services/: auth.py
tests/: test_connection_db.py  test_validators.py
(+52 files in other folders)
